# crystal_caravans

./: .gitignore  _intake.txt  mkdocs.yml  outline.md  pyproject.toml
docs/: 000_character_creation.md  002_0_your_chalice.md  002_dungeon_delving.md  003_weapons.md  003_z_armor.md  004_magic_and_statuses.md  005_fusion.md  010_appendix.md  011_starter_missions.md  012_river_belle_path.md  appendix.md  character_creation.md  data.xlsx  extra.css  fusion.md  index.md  time.md  towns.md  travelling.md  your_mission.md
docs/appendix/: 010_appendix.md  accessories.md  armor.md  armor_accessories.md  chalice_accessories.md  edible_accessories.md  index.md  monsters.md  weapons.md
docs/examples/: example_of_gameplay.md
docs/overrides/: custom_cover_page.html  main.html
docs/running_the_game/: missions.md
docs/setting_off/: 000_character_creation.md  001_your_mission.md  002_0_your_chalice.md
docs/starter_missions/: 012_river_belle_path.md  013_mushroom_forest.md  014_mines.md  end_of_year_1.md  index.md  introduction.md  marrs_pass.md  the_town_of_tipa.md
docs/the_basics/: 002_dungeon_delving.md  003_weapons.md  003_z_armor.md  004_magic_and_statuses.md  005_fusion.md
docs/the_passage_of_time/: 009_time.md
docs/traverse_the_world/: 007_travelling.md  008_towns.md
