[tool.poetry]
name = "crystal-chronicles-ttrpg"
version = "0.1.0"
description = ""
authors = ["Minty <kinostl@gmail.com>"]
readme = "README.md"
packages = [{include = "crystal_chronicles_ttrpg"}]

[tool.poetry.dependencies]
python = "^3.11"
mkdocs-material = "^9.1.21"
install = "^1.3.5"
mkdocs-print-site-plugin = "^2.3.5"
mkdocs-table-reader-plugin = "^2.0.1"
openpyxl = "^3.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
